# The-McEliece-Cryptosystem

./: CMakeLists.txt  README.md  argv.h  decrypt.c  encrypt.c  init.c  key_gen.c  matrix.c  matrix.h  mceliece.c  mceliece.h  qc_mdpc.c  qc_mdpc.h  test.c  utility.c  utility.h
